--- a/views/add_post.ejs
+++ b/views/add_post.ejs
@@ -46,7 +46,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <form class="tm-contact-form" method="post", action="/blogs">
+        <form class="tm-contact-form" method="post", action="/posts">
           <div class="control-group">
             <div class="form-group floating-label-form-group controls">
               <label>Post Title</label>
