--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,19 +24,19 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <% for(let i = 0; i < blogs.length; i++){ %>
+        <% for(let i = 0; i < posts.length; i++){ %>
         <div class="post-preview">
-          <a href="post.html">
+          <a href="/posts/<%= posts[i]._id %>">
             <h2 class="post-title">
-              <%= blogs[i].title %>
+              <%= posts[i].title %>
             </h2>
             <h3 class="post-subtitle">
-              <%= blogs[i].detail %>
+              <%= posts[i].detail %>
             </h3>
           </a>
           <p class="post-meta">Posted by
             <a href="#">Start Bootstrap</a>
-            on <%= blogs[i].dateCreated.getDate() %>/<%= blogs[i].dateCreated.getMonth() + 1 %>/<%= blogs[i].dateCreated.getFullYear() %></p>
+            on <%= posts[i].dateCreated.getDate() %>/<%= posts[i].dateCreated.getMonth() + 1 %>/<%= posts[i].dateCreated.getFullYear() %></p>
         </div>
         <hr>
         <% } %>
