--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -33,3 +33,6 @@
       </div>
     </div>
   </footer>
+
+  <script src="/js/jquery-3.4.1.min.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
